# emc_site

./: .gitignore  README.md  deploy.ps1  emc_for_sales.sln  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
emc_api/: Program.cs  appsettings.json  emc_api.csproj  emc_api.http  user.db
emc_api.Tests/: emc_api.Tests.csproj
emc_api.Tests/Repositories/: BizRepositoryTests.cs  UserRepositoryTests.cs
emc_api/Controllers/: AuthController.cs  GeneralController.cs  HealthController.cs  JsonFileController.cs  LogsController.cs  ReservationController.cs  SettingsController.cs  SeventsController.cs  StationController.cs  UserController.cs
emc_api/Data/: DatabaseInitializer.cs
emc_api/Middlewares/: AuthService.cs  AuthorizationMiddleware.cs  BasicAuthenticationHandler.cs  ExceptionHandlingMiddleware.cs  IAuthService.cs  RequestLoggingMiddleware.cs
emc_api/Models/: LogModels.cs  PaginatedResult.cs  Reservation.cs  Settings.cs  Sevent.cs  Station.cs  User.cs  init.sql
emc_api/Repositories/: BaseRepository.cs  BizRepository.cs  IBizRepository.cs  IUserRepository.cs  UserRepository.cs
emc_api/Services/: AesEncryption.cs  ILoggerService.cs  JsonLoggerService.cs  LoggerService.cs
emc_api/wwwroot/: index.html  station.html
src/: app.html  global.d.ts
src-tauri/: Cargo.toml  config.json  data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/biz/: apiService.ts  calendar.ts  database.ts  errorHandler.ts  errors.ts  exportSheets.ts  (+5 more)
static/: loading.html
(+94 files in other folders)
